--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,5 +95,5 @@
     <string name="kakao_app_key">dd560873b6e66aabdbcae76a910cf7db</string>
     <string name="fb_login_protocol_scheme">fb1982467608700145</string>
     <string name="tag">Tag</string>
-
+    <string name="tag1">Tag1</string>
 </resources>
